// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Incoming friend request list item will render correctly 1`] = `
"<li class="min-h-24 flex space-x-3 even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-md p-2 items-center">
  <div class="min-w-[64px]">
    <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="64px" height="64px" alt="" src="https://example.com/avatar.jpg">
      <!--v-if-->
    </p>
  </div>
  <div class="grow flex flex-col space-y-1">
    <p class="flex flex-col md:flex-row space-x-0 md:space-x-3 items-baseline"><button class="text-link hover:text-link-hover text-2xl" data-testid="select-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
        <!--v-if-->Test User
      </button><span class="text-lg font-bold">@testuser</span></p>
    <div class="flex flex-col lg:flex-row text-grey-400 space-x-0 lg:space-x-8">
      <p class="flex space-x-2"><span class="font-bold min-w-20 text-right">Requested:</span><span class="italic">lll</span></p>
      <p class="flex space-x-2"><span class="font-bold min-w-20 text-right">Expires:</span><span class="italic">lll</span></p>
    </div>
  </div>
  <div class="flex space-x-3 px-2"><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="accept-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
      <!--v-if--> Accept
    </button><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md bg-gradient-to-t disabled:text-grey-300 from-danger-dark hover:to-danger-hover to-danger" data-testid="decline-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
      <!--v-if--> Decline
    </button></div>
</li>"
`;

exports[`Incoming friend request list item will render correctly for a declined request with a reason 1`] = `
"<li class="min-h-24 flex space-x-3 even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-md p-2 items-center">
  <div class="min-w-[64px]">
    <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="64px" height="64px" alt="" src="https://example.com/avatar.jpg">
      <!--v-if-->
    </p>
  </div>
  <div class="grow flex flex-col space-y-1">
    <p class="flex flex-col md:flex-row space-x-0 md:space-x-3 items-baseline"><button class="text-link hover:text-link-hover text-2xl" data-testid="select-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
        <!--v-if-->Test User
      </button><span class="text-lg font-bold">@testuser</span></p>
    <div class="flex space-x-3 text-danger">
      <div class="my-1"><i class="fa-regular fa-circle-xmark"></i></div>
      <div>
        <p class="text-lg italic">This friend request has been declined.</p>
        <p class="text-sm">"Nope. Denied!"</p>
      </div>
    </div>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="dismiss-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
      <!--v-if--> Dismiss
    </button></div>
</li>"
`;

exports[`Incoming friend request list item will render correctly for a declined request with no reason 1`] = `
"<li class="min-h-24 flex space-x-3 even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-md p-2 items-center">
  <div class="min-w-[64px]">
    <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="64px" height="64px" alt="" src="https://example.com/avatar.jpg">
      <!--v-if-->
    </p>
  </div>
  <div class="grow flex flex-col space-y-1">
    <p class="flex flex-col md:flex-row space-x-0 md:space-x-3 items-baseline"><button class="text-link hover:text-link-hover text-2xl" data-testid="select-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
        <!--v-if-->Test User
      </button><span class="text-lg font-bold">@testuser</span></p>
    <div class="flex space-x-3 text-danger">
      <div class="my-1"><i class="fa-regular fa-circle-xmark"></i></div>
      <div>
        <p class="text-lg italic">This friend request has been declined.</p>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="dismiss-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
      <!--v-if--> Dismiss
    </button></div>
</li>"
`;

exports[`Incoming friend request list item will render correctly for an accepted request 1`] = `
"<li class="min-h-24 flex space-x-3 even:bg-blue-300/40 even:dark:bg-blue-900/40 rounded-md p-2 items-center">
  <div class="min-w-[64px]">
    <p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="64px" height="64px" alt="" src="https://example.com/avatar.jpg">
      <!--v-if-->
    </p>
  </div>
  <div class="grow flex flex-col space-y-1">
    <p class="flex flex-col md:flex-row space-x-0 md:space-x-3 items-baseline"><button class="text-link hover:text-link-hover text-2xl" data-testid="select-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
        <!--v-if-->Test User
      </button><span class="text-lg font-bold">@testuser</span></p>
    <div class="flex space-x-3 text-lg italic text-success"><span><i class="fa-regular fa-circle-check"></i></span><span>This friend request has been accepted.</span></div>
  </div>
  <div><button class="text-grey-950 p-2 m-0 text-sm border-1 border-grey-800 shadow-sm shadow-grey-800 rounded-md disabled:text-grey-500 bg-secondary hover:bg-secondary-hover" data-testid="dismiss-request-c0175aac-fe45-4a53-a3f7-41eb0f0f52b6" type="button">
      <!--v-if--> Dismiss
    </button></div>
</li>"
`;
